# ros2-fishbot

./: .gitignore  README.md
src/autopatrol_interfaces/: CMakeLists.txt  package.xml
src/autopatrol_robot/: package.xml  setup.py
src/autopatrol_robot/autopatrol_robot/: patrol_node.py  speaker.py
src/autopatrol_robot/config/: patrol_config.yaml
src/autopatrol_robot/launch/: autopatrol.launch.py
src/fishbot_application/: package.xml  setup.py
src/fishbot_description/: CMakeLists.txt  package.xml
src/fishbot_description/config/: fishbot_ros2_controller.yaml
src/fishbot_description/launch/: gazebo_sim.launch.py
src/fishbot_description/urdf/fishbot/: fishbot.urdf.xacro
src/fishbot_description/urdf/fishbot/actuator/: caster.urdf.xacro  wheel.urdf.xacro
src/fishbot_description/urdf/fishbot/sensor/: camera.urdf.xacro  laser.urdf.xacro
src/fishbot_navigation2/: package.xml
